# OpenGL_Study

./: .gitignore  1.c  2.c  CMakeLists.txt  build_and_run.sh
engine/camera/: camera.c
engine/renderer/: shader.c
include/camera/: camera.h
include/glad/: glad.h
include/renderer/: shader.h
shaders/: camera.frag  coordinate_system.vert  textures.frag  transform.frag  transform.vert
src/: basic_window.c  camera0.c  camera1.c  camera2.c  camera3.c  coordinate_system.c  coordinate_system1.c  coordinate_system2.c  glad.c  hello_triangle.c  shaders.c  test.c  test1.c  textures.c  transform.c
